--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,6 +7,13 @@
     group: "{{ qgisserver_group }}"
     mode: 0755
 
+- file:
+    path: "{{ giscube_fcgis_path }}/{{ giscube_qgisserver_app_path }}/auth_db"
+    state: directory
+    owner: "{{ qgisserver_owner }}"
+    group: "{{ qgisserver_group }}"
+    mode: 0755
+
 # copy fcgi script
 - name: copy qgisserver applications to fcgis directory
   template:
